--- a/client/src/style/main.css
+++ b/client/src/style/main.css
@@ -10827,6 +10827,46 @@ video {
   border-style: none;
 }
 
+.focus\:border-solid:focus {
+  border-style: solid;
+}
+
+.focus\:border-dashed:focus {
+  border-style: dashed;
+}
+
+.focus\:border-dotted:focus {
+  border-style: dotted;
+}
+
+.focus\:border-double:focus {
+  border-style: double;
+}
+
+.focus\:border-none:focus {
+  border-style: none;
+}
+
+.active\:border-solid:active {
+  border-style: solid;
+}
+
+.active\:border-dashed:active {
+  border-style: dashed;
+}
+
+.active\:border-dotted:active {
+  border-style: dotted;
+}
+
+.active\:border-double:active {
+  border-style: double;
+}
+
+.active\:border-none:active {
+  border-style: none;
+}
+
 .border-0 {
   border-width: 0px;
 }
@@ -41802,6 +41842,46 @@ video {
     border-style: none;
   }
 
+  .sm\:focus\:border-solid:focus {
+    border-style: solid;
+  }
+
+  .sm\:focus\:border-dashed:focus {
+    border-style: dashed;
+  }
+
+  .sm\:focus\:border-dotted:focus {
+    border-style: dotted;
+  }
+
+  .sm\:focus\:border-double:focus {
+    border-style: double;
+  }
+
+  .sm\:focus\:border-none:focus {
+    border-style: none;
+  }
+
+  .sm\:active\:border-solid:active {
+    border-style: solid;
+  }
+
+  .sm\:active\:border-dashed:active {
+    border-style: dashed;
+  }
+
+  .sm\:active\:border-dotted:active {
+    border-style: dotted;
+  }
+
+  .sm\:active\:border-double:active {
+    border-style: double;
+  }
+
+  .sm\:active\:border-none:active {
+    border-style: none;
+  }
+
   .sm\:border-0 {
     border-width: 0px;
   }
@@ -72731,6 +72811,46 @@ video {
   }
 
   .md\:border-none {
+    border-style: none;
+  }
+
+  .md\:focus\:border-solid:focus {
+    border-style: solid;
+  }
+
+  .md\:focus\:border-dashed:focus {
+    border-style: dashed;
+  }
+
+  .md\:focus\:border-dotted:focus {
+    border-style: dotted;
+  }
+
+  .md\:focus\:border-double:focus {
+    border-style: double;
+  }
+
+  .md\:focus\:border-none:focus {
+    border-style: none;
+  }
+
+  .md\:active\:border-solid:active {
+    border-style: solid;
+  }
+
+  .md\:active\:border-dashed:active {
+    border-style: dashed;
+  }
+
+  .md\:active\:border-dotted:active {
+    border-style: dotted;
+  }
+
+  .md\:active\:border-double:active {
+    border-style: double;
+  }
+
+  .md\:active\:border-none:active {
     border-style: none;
   }
 
@@ -103666,6 +103786,46 @@ video {
     border-style: none;
   }
 
+  .lg\:focus\:border-solid:focus {
+    border-style: solid;
+  }
+
+  .lg\:focus\:border-dashed:focus {
+    border-style: dashed;
+  }
+
+  .lg\:focus\:border-dotted:focus {
+    border-style: dotted;
+  }
+
+  .lg\:focus\:border-double:focus {
+    border-style: double;
+  }
+
+  .lg\:focus\:border-none:focus {
+    border-style: none;
+  }
+
+  .lg\:active\:border-solid:active {
+    border-style: solid;
+  }
+
+  .lg\:active\:border-dashed:active {
+    border-style: dashed;
+  }
+
+  .lg\:active\:border-dotted:active {
+    border-style: dotted;
+  }
+
+  .lg\:active\:border-double:active {
+    border-style: double;
+  }
+
+  .lg\:active\:border-none:active {
+    border-style: none;
+  }
+
   .lg\:border-0 {
     border-width: 0px;
   }
@@ -134598,6 +134758,46 @@ video {
     border-style: none;
   }
 
+  .xl\:focus\:border-solid:focus {
+    border-style: solid;
+  }
+
+  .xl\:focus\:border-dashed:focus {
+    border-style: dashed;
+  }
+
+  .xl\:focus\:border-dotted:focus {
+    border-style: dotted;
+  }
+
+  .xl\:focus\:border-double:focus {
+    border-style: double;
+  }
+
+  .xl\:focus\:border-none:focus {
+    border-style: none;
+  }
+
+  .xl\:active\:border-solid:active {
+    border-style: solid;
+  }
+
+  .xl\:active\:border-dashed:active {
+    border-style: dashed;
+  }
+
+  .xl\:active\:border-dotted:active {
+    border-style: dotted;
+  }
+
+  .xl\:active\:border-double:active {
+    border-style: double;
+  }
+
+  .xl\:active\:border-none:active {
+    border-style: none;
+  }
+
   .xl\:border-0 {
     border-width: 0px;
   }
@@ -165527,6 +165727,46 @@ video {
   }
 
   .\32xl\:border-none {
+    border-style: none;
+  }
+
+  .\32xl\:focus\:border-solid:focus {
+    border-style: solid;
+  }
+
+  .\32xl\:focus\:border-dashed:focus {
+    border-style: dashed;
+  }
+
+  .\32xl\:focus\:border-dotted:focus {
+    border-style: dotted;
+  }
+
+  .\32xl\:focus\:border-double:focus {
+    border-style: double;
+  }
+
+  .\32xl\:focus\:border-none:focus {
+    border-style: none;
+  }
+
+  .\32xl\:active\:border-solid:active {
+    border-style: solid;
+  }
+
+  .\32xl\:active\:border-dashed:active {
+    border-style: dashed;
+  }
+
+  .\32xl\:active\:border-dotted:active {
+    border-style: dotted;
+  }
+
+  .\32xl\:active\:border-double:active {
+    border-style: double;
+  }
+
+  .\32xl\:active\:border-none:active {
     border-style: none;
   }
 
